# CamTelligence

./: .dockerignore  .env.example  README.md  docker-compose.yml
frontend/: Dockerfile  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Header.tsx
frontend/src/pages/: EventBrowser.tsx  LiveEvents.tsx
scripts/: motion_capture.py  motion_experiment.py  motion_optimize.py
services/api/: Dockerfile  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/app/: dependencies.py  main.py  schemas.py
services/api/app/core/: config.py
services/api/app/repositories/: event_repository.py  settings_repository.py
services/api/app/routers/: admin.py  events.py  media.py  persons.py  settings.py  vehicles.py
services/api/app/services/: event_service.py  settings_service.py
services/core/: pyproject.toml
services/core/ct_core/: db.py
services/core/oi_core/: config.py  models.py
services/processor/: DockerFile  requirements.txt
services/processor/CamT_processor/: __init__.py  dto.py  image_ops.py  logging_utils.py  main.py
services/processor/CamT_processor/api/: alembic.ini  requirements.txt
services/processor/CamT_processor/config/: janitor_settings.py  settings.py
services/processor/CamT_processor/detector/: movement_detector.py  yolo_detector.py
services/processor/CamT_processor/janitor/: __init__.py  main.py  retention.py
services/processor/CamT_processor/notifications/: telegram.py
(+16 files in other folders)
