[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oi-core"
version = "0.1.0"
description = "Shared domain models and schemas for CamTelligence"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.10,<2.0",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
